[build-system]
build-backend = 'mesonpy'
requires = ['meson-python']

[project]
name = "datastoragelease"
version = "1.0.0"
description = "Check size of folders against a .toml file"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["data management", "folder size"]
dependencies = [
    "pywin32",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["pyinstaller"]

[project.urls]
Homepage = "https://github.com/BioImaging-NKI/datastoragelease"

[tool.mypy]
python_version = '3.12'
mypy_path = "src"
packages = "datastoragelease"
strict = true