[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datastoragelease"
version = "1.1.0"
description = "Check size of folders against a .toml file"
readme = "README.md"
authors = [{ name = "Rolf Harkes", email = "r.harkes@nki.nl" }]
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["data management", "folder size"]
dependencies = [
    "pywin32",
]
requires-python = ">=3.12"

[project.optional-dependencies]
dev = ["types-pywin32", "pyinstaller", "mypy", "bumpver"]
build = ["pyinstaller"]

[project.urls]
Homepage = "https://github.com/BioImaging-NKI/datastoragelease"

[tool.mypy]
python_version = '3.12'
mypy_path = "src"
packages = "datastoragelease"
strict = true


[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/datastoragelease/version.py" = [
    "{version}"
]
"VERSION" = ['filevers=(MAJOR, MINOR, PATCH, 0)']